# youtube-scraper

./: .gitignore  Cargo.toml  README.md  background.js  manifest.json  popup.css  popup.html  popup.js
.github/workflows/: release.yml
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: app.js  index.html  style.css
