[package]
name = "youtube_comment_scraper_gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = ["shell-open"] }

# Use the core scraper library from the repo root
youtube_comment_scraper = { path = ".." }
